Prepare 1.20.1 backport